Implement liveness and readiness APIs
This change adds a `/api/_health/live` and `/api/_health/ready` APIs. The liveness check
returns 200 without doing anything, just for proof of life. If the caller gets a 200, it's alive.
The readiness route checks data store and notification dependencies for their reachability
before determining if the system is ready to act.

If Postgres is down we're not useful, so that should cause alerting to fire. If email sending is down then we can't handle logins, so that too is cause for alert. (Note: this doesn't implement any alerts, I'm just classifying those two problems as critical.)
